// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`anchors-aliases.yml format 1`] = `
    : ====================================options=====================================
    : parsers: ["yaml"]
    : rangeEnd: 29
    : rangeStart: 13
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
> 1 | a: &anchor   value
    |              ^^^^^
> 2 | b: *anchor
    | ^^^^^^^^^^
  3 |
    : =====================================output=====================================
    : a: &anchor value
    : b: *anchor
    : ================================================================================
`;

exports[`basic.yml format 1`] = `
    : ====================================options=====================================
    : parsers: ["yaml"]
    : rangeEnd: 22
    : rangeStart: 10
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | a:      1
> 2 | b:  2
    | ^^^^^
> 3 | c:   3
    | ^^^^^^
  4 | d:      4
  5 |
    : =====================================output=====================================
    : a:      1
    : b: 2
    : c: 3
    : d:      4
    :
    : ================================================================================
`;

exports[`block-folded.yml format 1`] = `
    : ====================================options=====================================
    : parsers: ["yaml"]
    : rangeEnd: 30
    : rangeStart: 13
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | key: >2-
> 2 |     line 1
    |     ^^^^^^
> 3 |     line 2
    | ^^^^^^^^^^
  4 |
    : =====================================output=====================================
    : key: >2-
    :     line 1
    :     line 2
    : ================================================================================
`;

exports[`comment-item.yml format 1`] = `
    : ====================================options=====================================
    : parsers: ["yaml"]
    : rangeEnd: 72
    : rangeStart: 5
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | foo:
> 2 |   # first we check this
    | ^^^^^^^^^^^^^^^^^^^^^^^
> 3 |   - condition: foobar
    | ^^^^^^^^^^^^^^^^^^^^^
> 4 |     output:      true
    | ^^^^^^^^^^^^^^^^^^^^^
  5 |
  6 |   # then we check that
  7 |   - condition: barbar
  8 |     output:      true
  9 |
    : =====================================output=====================================
    : foo:
    :   # first we check this
    :   - condition: foobar
    :     output: true
    :
    :   # then we check that
    :   - condition: barbar
    :     output: true
    : ================================================================================
`;

exports[`comments.yml format 1`] = `
    : ====================================options=====================================
    : parsers: ["yaml"]
    : rangeEnd: 84
    : rangeStart: 43
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | a:      1
  2 | # comment before b (should stay)
> 3 | b:      2
    | ^^^^^^^^^
> 4 | # comment after b (should stay)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  5 | c:      3
  6 |
    : =====================================output=====================================
    : a:      1
    : # comment before b (should stay)
    : b:      2
    : # comment after b (should stay)
    : c:      3
    :
    : ================================================================================
`;

exports[`complex-keys.yml format 1`] = `
    : ====================================options=====================================
    : parsers: ["yaml"]
    : rangeEnd: 19
    : rangeStart: 2
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
> 1 | ? - item1
    |   ^^^^^^^
> 2 |   - item2
    | ^^^^^^^^^
  3 | : value
  4 |
    : =====================================output=====================================
    : ? - item1
    :   - item2
    : : value
    :
    : ================================================================================
`;

exports[`empty-values.yml format 1`] = `
    : ====================================options=====================================
    : parsers: ["yaml"]
    : rangeEnd: 14
    : rangeStart: 3
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | a:
> 2 | b:
    | ^^
> 3 | c:     3
    | ^^^^^^^^
  4 |
    : =====================================output=====================================
    : a:
    : b:
    : c: 3
    :
    : ================================================================================
`;

exports[`entire-file.yml format 1`] = `
    : ====================================options=====================================
    : parsers: ["yaml"]
    : rangeEnd: 29
    : rangeStart: 0
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
> 1 | a:      1
    | ^^^^^^^^^
> 2 | b:      2
    | ^^^^^^^^^
> 3 | c:      3
    | ^^^^^^^^^
  4 |
    : =====================================output=====================================
    : a: 1
    : b: 2
    : c: 3
    : ================================================================================
`;

exports[`flow-style.yml format 1`] = `
    : ====================================options=====================================
    : parsers: ["yaml"]
    : rangeEnd: 44
    : rangeStart: 25
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | block:
> 2 |   nested: { a: 1, b:    2,
    |                   ^^^^^^^^
> 3 |     c: 3 }
    | ^^^^^^^^^^
  4 |
    : =====================================output=====================================
    : block:
    :   nested: { a: 1, b: 2, c: 3 }
    :
    : ================================================================================
`;

exports[`multi-document.yml format 1`] = `
    : ====================================options=====================================
    : parsers: ["yaml"]
    : rangeEnd: 22
    : rangeStart: 5
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | a: 1
> 2 | ...
    | ^^^
> 3 | ---
    | ^^^
> 4 | b:      2
    | ^^^^^^^^^
  5 | c: 3
  6 |
    : =====================================output=====================================
    : a: 1
    : ...
    : ---
    : b:      2
    : c: 3
    :
    : ================================================================================
`;

exports[`nested-block-scalar.yml format 1`] = `
    : ====================================options=====================================
    : parsers: ["yaml"]
    : rangeEnd: 56
    : rangeStart: 33
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | obj:
  2 |   key: |
  3 |       line 1
> 4 |       line   2
    |       ^^^^^^^^
> 5 |       line   3
    | ^^^^^^^^^^^^^^
  6 |       line 4
  7 |
    : =====================================output=====================================
    : obj:
    :   key: |
    :     line 1
    :     line   2
    :     line   3
    :     line 4
    : ================================================================================
`;

exports[`nested-sequences.yml format 1`] = `
    : ====================================options=====================================
    : parsers: ["yaml"]
    : rangeEnd: 32
    : rangeStart: 15
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | - - item 1
> 2 |   - item 2
    |     ^^^^^^
> 3 | - - item 3
    | ^^^^^^^^^^
  4 |
    : =====================================output=====================================
    : - - item 1
    :   - item 2
    : - - item 3
    :
    : ================================================================================
`;

exports[`prettier-ignore.yml format 1`] = `
    : ====================================options=====================================
    : parsers: ["yaml"]
    : rangeEnd: 56
    : rangeStart: 25
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
  1 | # prettier-ignore
  2 | a:   1
> 3 | # prettier-ignore
    | ^^^^^^^^^^^^^^^^^
> 4 | b:   2
    | ^^^^^^
> 5 | c:   3
    | ^^^^^^
  6 |
    : =====================================output=====================================
    : # prettier-ignore
    : a:   1
    : # prettier-ignore
    : b:   2
    : c:   3
    :
    : ================================================================================
`;

exports[`tags.yml format 1`] = `
    : ====================================options=====================================
    : parsers: ["yaml"]
    : rangeEnd: 32
    : rangeStart: 3
    :                                                       printWidth: 80 (default) |
    : =====================================input======================================
> 1 | a: !!str
    |    ^^^^^
> 2 |   value   with   spaces
    | ^^^^^^^^^^^^^^^^^^^^^^^
  3 |
    : =====================================output=====================================
    : a: !!str value   with   spaces
    :
    : ================================================================================
`;
